--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,12 @@
+body {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  min-width: 320px;
+}
+
 header {
   font-family: 'Oswald', sans-serif;
   font-size: 13px;
@@ -5,11 +14,81 @@ header {
   color: white;
   width: 100%;
   height: 60px;
+}
+
+.flex {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.relative {
   position: relative;
 }
 
-header > h1 {
+.flex-center {
+  display: flex;
+  justify-content: center;
+}
+
+.center-align {
   position: absolute;
-  top: -17%;
-  left: 19%;
+  left: 16.5%;
+  top: -15%;
+}
+
+.form-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  width: 70%;
+}
+
+.col-full {
+  width: 100%;
+}
+
+.col-half > img {
+  width: 100%;
+}
+
+.col-half {
+  width: 90%;
+}
+
+.header {
+  font-size: 20px;
+}
+
+.margin-twenty {
+  margin: 20px;
+}
+
+.form-label {
+  font-family: 'Oswald', sans-serif;
+  font-size: 15px;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+input {
+  height: 8%;
+}
+
+.full-wide {
+  width: 100%;
+}
+
+.align-end {
+  display: flex;
+  justify-content: flex-end;
+}
+
+@media only screen and (min-width: 660px) {
+  .col-half {
+    width: 40%;
+  }
 }
