--- a/css/styles.css
+++ b/css/styles.css
@@ -123,3 +123,16 @@ input {
 }
 
 }
+
+.inline-block {
+  display: inline-block;
+}
+
+.button a {
+  margin-left: 20px;
+  font-family: 'Oswald', sans-serif;
+  font-size: 20px;
+  color: white;
+  align-self: center;
+  text-decoration: none;
+}
