--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,14 @@ input {
   width: 70%;
 }
 
+.alternate-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 70%;
+}
+
+
 .col-full {
   width: 100%;
 }
@@ -135,4 +143,11 @@ input {
   color: white;
   align-self: center;
   text-decoration: none;
+}
+
+.submit {
+  width: 60px;
+  height: 28px;
+  font-size: 14px;
+  font-family: 'Oswald', sans-serif;
 }
