issue 4 resolved - requesting merge

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ header {
 }
 
 input {
-  height: 8%;
+  height: 20%;
 }
 
 .relative {
@@ -128,6 +128,10 @@ input {
 }
 .margin-five {
   margin: 0px;
+}
+
+input {
+  height: 8%;
 }
 
 }
